// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stackedHistory > stores a sequence of edits 1`] = `
{
  "periodicity": 3,
  "serial": 3,
  "stack": {
    "deltas": [
      {
        "change": [
          [
            1,
            "foo",
          ],
        ],
        "date": "1070-01-01T00:00:00.000Z",
      },
      {
        "change": [
          [
            0,
            3,
          ],
          [
            1,
            "bar",
          ],
        ],
        "date": "1070-01-01T00:00:00.000Z",
      },
      {
        "change": [
          [
            -1,
            3,
          ],
          [
            0,
            3,
          ],
        ],
        "date": "1070-01-01T00:00:00.000Z",
      },
    ],
    "next": null,
    "snapshot": "bar",
  },
}
`;

exports[`stackedHistory > stores a sequence of edits onto the next stack 1`] = `
{
  "periodicity": 3,
  "serial": 4,
  "stack": {
    "deltas": [
      {
        "change": [
          [
            0,
            3,
          ],
          [
            1,
            "bar",
          ],
        ],
        "date": "1070-01-01T00:00:00.000Z",
      },
      {
        "change": [
          [
            -1,
            3,
          ],
          [
            0,
            3,
          ],
        ],
        "date": "1070-01-01T00:00:00.000Z",
      },
      {
        "change": [
          [
            0,
            3,
          ],
          [
            1,
            "baz",
          ],
        ],
        "date": "1070-01-01T00:00:00.000Z",
      },
    ],
    "next": {
      "deltas": [
        null,
        null,
        {
          "change": [
            [
              1,
              "bar",
            ],
          ],
          "date": "1070-01-01T00:00:00.000Z",
        },
      ],
      "next": null,
      "snapshot": "bar",
    },
    "snapshot": "barbaz",
  },
}
`;
